@@ -1,0 +1,2 @@
+Tests the way DDL1 dictionaries without the _dictionary_history data item are
+handled.
