@@ -1,0 +1,1 @@
+Tests the handling of the '--new-version' option.
