@@ -1,0 +1,46 @@
+##############################################################################
+#                                                                            #
+#                 DDL1 DEFINITIONS USED FOR TESTING PURPOSES                 #
+#                 ------------------------------------------                 #
+#                                                                            #
+# Dictionary that contains the _dictionary_history data item.                #
+##############################################################################
+
+data_on_this_dictionary
+    _dictionary_name            included_development_history_test.dic
+    _dictionary_version         0.001
+    _dictionary_update          2023-11-21
+    _dictionary_history
+;
+    2023-11-21                  Added item _category_A_regular_item_2.
+
+    2023-11-20                  Added item _category_A_regular_item_1.
+
+    1995-02-02                  Initial release of the dictionary.
+;
+
+data_category_A_[]
+    _name                      '_category_A_[]'
+    _category                    category_overview
+    _type                        null
+
+data_category_A_regular_item_1
+    _name                      '_category_A_regular_item_1'
+    _category                    category_A
+    _type                        char
+    _list                        yes
+    _definition
+;
+  Data item that belongs to the CATEGORY_A category.
+;
+
+
+data_category_A_regular_item_2
+    _name                      '_category_A_regular_item_2'
+    _category                    category_A
+    _type                        char
+    _list                        yes
+    _definition
+;
+  Another data item that belongs to the CATEGORY_A category.
+;
