@@ -1,0 +1,38 @@
+##############################################################################
+#                                                                            #
+#                 DDL1 DEFINITIONS USED FOR TESTING PURPOSES                 #
+#                 ------------------------------------------                 #
+#                                                                            #
+# Dictionary that does not contain the _dictionary_history data item.        #
+##############################################################################
+
+data_on_this_dictionary
+    _dictionary_name            excluded_development_history_test.dic
+    _dictionary_version         0.001
+    _dictionary_update          2023-11-21
+
+data_category_A_[]
+    _name                      '_category_A_[]'
+    _category                    category_overview
+    _type                        null
+
+data_category_A_regular_item_1
+    _name                      '_category_A_regular_item_1'
+    _category                    category_A
+    _type                        char
+    _list                        yes
+    _definition
+;
+  Data item that belongs to the CATEGORY_A category.
+;
+
+
+data_category_A_regular_item_2
+    _name                      '_category_A_regular_item_2'
+    _category                    category_A
+    _type                        char
+    _list                        yes
+    _definition
+;
+  Another data item that belongs to the CATEGORY_A category.
+;
