@@ -1,7 +1,7 @@
 #\#CIF_2.0
 data_CIF_COD
 _dictionary.title                CIF_COD
-_dictionary.version              0.0.1
+_dictionary.version              0.0.1+DDL1-version.0.0.1
 _dictionary.date                 2009-06-13
 _dictionary.class                Instance
 _dictionary.ddl_conformance      4.1.0
@@ -9,8 +9,12 @@ loop_
 _dictionary_audit.version
 _dictionary_audit.date
 _dictionary_audit.revision
-0.0.1 2009-06-13
+0.0.1+DDL1-version.0.0.1 2009-06-13
 ;
+Automatically converted from DDL1 to DDLm.
+
+History of the original DDL1 dictionary:
+
 2009-06-13 Putting all private COD tags used at the moment. S.G.
 ;
 save_category_overview
