@@ -1,7 +1,7 @@
 #\#CIF_2.0
 data_TEST_LIST_REFERENCE
 _dictionary.title                TEST_LIST_REFERENCE
-_dictionary.version              0.0.1
+_dictionary.version              0.0.1+DDL1-version.0.0.1
 _dictionary.date                 2019-05-15
 _dictionary.class                Instance
 _dictionary.ddl_conformance      4.1.0
@@ -9,8 +9,12 @@ loop_
 _dictionary_audit.version
 _dictionary_audit.date
 _dictionary_audit.revision
-0.0.1 2019-05-15
+0.0.1+DDL1-version.0.0.1 2019-05-15
 ;
+Automatically converted from DDL1 to DDLm.
+
+History of the original DDL1 dictionary:
+
  2019-05-15 Created the dictionary.
 ;
 save_category_overview
