@@ -1,7 +1,7 @@
 #\#CIF_2.0
 data_SIMPLE_CATEGORY_TEST
 _dictionary.title                SIMPLE_CATEGORY_TEST
-_dictionary.version              0.001
+_dictionary.version              0.0.1+DDL1-version.0.001
 _dictionary.date                 2023-11-21
 _dictionary.class                Instance
 _dictionary.ddl_conformance      4.1.0
@@ -9,8 +9,12 @@ loop_
 _dictionary_audit.version
 _dictionary_audit.date
 _dictionary_audit.revision
-0.001 2023-11-21
+0.0.1+DDL1-version.0.001 2023-11-21
 ;
+Automatically converted from DDL1 to DDLm.
+
+History of the original DDL1 dictionary:
+
     2023-11-21                  Initial release of the dictionary.
 ;
 save_category_overview
