@@ -1,0 +1,48 @@
+#\#CIF_2.0
+data_EXCLUDED_DEVELOPMENT_HISTORY_TEST
+_dictionary.title                EXCLUDED_DEVELOPMENT_HISTORY_TEST
+_dictionary.version              0.0.1+DDL1-version.0.001
+_dictionary.date                 2023-11-21
+_dictionary.class                Instance
+_dictionary.ddl_conformance      4.1.0
+save_category_overview
+_definition.id                   CATEGORY_OVERVIEW
+_definition.class                Head
+_definition.scope                Category
+_name.object_id                  CATEGORY_OVERVIEW
+_name.category_id                EXCLUDED_DEVELOPMENT_HISTORY_TEST
+save_
+save_category_A
+_name.category_id                category_overview
+_definition.update               2023-11-21
+_definition.class                Loop
+_definition.scope                Category
+_definition.id                   CATEGORY_A
+_name.object_id                  CATEGORY_A
+save_
+save_category_A_regular_item_1
+_name.category_id                category_A
+_description.text
+;
+  Data item that belongs to the CATEGORY_A category.
+;
+_definition.update               2023-11-21
+_definition.class                Datum
+_type.container                  Single
+_type.contents                   Text
+_definition.id                   '_category_A_regular_item_1'
+_name.object_id                  '_category_A_regular_item_1'
+save_
+save_category_A_regular_item_2
+_name.category_id                category_A
+_description.text
+;
+  Another data item that belongs to the CATEGORY_A category.
+;
+_definition.update               2023-11-21
+_definition.class                Datum
+_type.container                  Single
+_type.contents                   Text
+_definition.id                   '_category_A_regular_item_2'
+_name.object_id                  '_category_A_regular_item_2'
+save_
