@@ -1,0 +1,64 @@
+#\#CIF_2.0
+data_INCLUDED_DEVELOPMENT_HISTORY_TEST
+_dictionary.title                INCLUDED_DEVELOPMENT_HISTORY_TEST
+_dictionary.version              3.14.42
+_dictionary.date                 2023-11-21
+_dictionary.class                Instance
+_dictionary.ddl_conformance      4.1.0
+loop_
+_dictionary_audit.version
+_dictionary_audit.date
+_dictionary_audit.revision
+3.14.42 2023-11-21
+;
+Automatically converted from DDL1 to DDLm.
+
+History of the original DDL1 dictionary:
+
+    2023-11-21                  Added item _category_A_regular_item_2.
+
+    2023-11-20                  Added item _category_A_regular_item_1.
+
+    1995-02-02                  Initial release of the dictionary.
+;
+save_category_overview
+_definition.id                   CATEGORY_OVERVIEW
+_definition.class                Head
+_definition.scope                Category
+_name.object_id                  CATEGORY_OVERVIEW
+_name.category_id                INCLUDED_DEVELOPMENT_HISTORY_TEST
+save_
+save_category_A
+_name.category_id                category_overview
+_definition.update               2023-11-21
+_definition.class                Loop
+_definition.scope                Category
+_definition.id                   CATEGORY_A
+_name.object_id                  CATEGORY_A
+save_
+save_category_A_regular_item_1
+_name.category_id                category_A
+_description.text
+;
+  Data item that belongs to the CATEGORY_A category.
+;
+_definition.update               2023-11-21
+_definition.class                Datum
+_type.container                  Single
+_type.contents                   Text
+_definition.id                   '_category_A_regular_item_1'
+_name.object_id                  '_category_A_regular_item_1'
+save_
+save_category_A_regular_item_2
+_name.category_id                category_A
+_description.text
+;
+  Another data item that belongs to the CATEGORY_A category.
+;
+_definition.update               2023-11-21
+_definition.class                Datum
+_type.container                  Single
+_type.contents                   Text
+_definition.id                   '_category_A_regular_item_2'
+_name.object_id                  '_category_A_regular_item_2'
+save_
