@@ -7,7 +7,7 @@ scripts/dic2markdown: tests/cases/dic2markdown_005.inp: WARNING, some data items
 scripts/dic2markdown: tests/cases/dic2markdown_005.inp: WARNING, apparently DDL1 dictionary was encountered, converting it to DDLm; the conversion is experimental and may result in corruption or loss of dictionary data.
 # CIF\_CORE
 
-Version: 2.4 (2008-03-10)
+Version: 0.0.1+DDL1-version.2.4 (2008-03-10)
 
 Synthesis and Reactivity toward Isonitriles of (2-Aminoaryl)palladium(II) 
 Complexes. José Vicente, José-Antonio Abad, Andrew D. Frankland, Joaquín 
