@@ -15,6 +15,8 @@ cod-tools (unreleased)
     - COD::CIF::DDL:
         - ensured that the same date is set to both the '_dictionary.date' data
           item and the most recent entry in the DICTIONARY_AUDIT loop.
+        - ensured that the automatically generated dictionary date adheres
+          to the requirements of the DDLm 'Version' data type.
         - the description of the '--imports' option in the help message.
 
 cod-tools (3.8.0)
